--- a/ui/ui-accordion/ui-accordion.css
+++ b/ui/ui-accordion/ui-accordion.css
@@ -1,4 +1,17 @@
 ui-accordion{
+  --ui-accordion-border-radius:var(--ui-border-radius-default);
+  --ui-accordion-header-font-size:16px;
+  --ui-accordion-panel-font-size:14px;
+  --ui-accordion-header-padding-inline:20px 12px;
+  --ui-accordion-panel-padding-inline:20px;
+  --ui-accordion-header-padding-block:12px;
+  --ui-accordion-panel-padding-block:12px;
+  --ui-accordion-icon-expand-size:24px;
+
+  --ui-accordion-surface-color:var(--ui-surface-color-default);
+  --ui-accordion-header-font-color:var(--ui-color-white);
+  --ui-accordion-panel-font-color:var(--ui-color-gray-200);
+
   display:flex;
   flex-direction:column;
   row-gap:10px;
@@ -8,9 +21,15 @@ ui-accordion{
   & > [data-index]{
     border-radius:inherit;
     width:100%;
-    background-color:var(--ui-accordion-background-color);
+    background-color:var(--ui-accordion-surface-color);
 
     > ui-button[aria-controls]{
+      --ui-button-size:auto;
+      --ui-button-surface-color-default:transparent;
+      --ui-button-surface-color-hover:transparent;
+      --ui-button-surface-color-focus:transparent;
+      --ui-button-surface-color-active:transparent;
+
       justify-content:space-between;
       border-radius:inherit;
       padding-block:var(--ui-accordion-header-padding-block);
@@ -55,25 +74,6 @@ ui-accordion{
   }
 
   /* shape */
-  &[shape="rounded"]{
-    --ui-accordion-border-radius:var(--ui-border-radius-rounded);}
-
-  &[shape="square"]{
-    --ui-accordion-border-radius:var(--ui-border-radius-square);}
-
-  /* theme */
-  &[theme="default"]{
-    --ui-accordion-background-color:var(--ui-color-gray-800);
-    --ui-accordion-header-font-color:var(--ui-color-white);
-    --ui-accordion-panel-font-color:var(--ui-color-gray-200);}
-
-  /* size */
-  &[size="default"]{
-    --ui-accordion-header-font-size:16px;
-    --ui-accordion-panel-font-size:14px;
-    --ui-accordion-header-padding-inline:20px 12px;
-    --ui-accordion-panel-padding-inline:20px;
-    --ui-accordion-header-padding-block:12px;
-    --ui-accordion-panel-padding-block:12px;
-    --ui-accordion-icon-expand-size:24px;}
+  &[shape="rounded"]{--ui-accordion-border-radius:var(--ui-border-radius-rounded);}
+  &[shape="square"]{--ui-accordion-border-radius:var(--ui-border-radius-square);}
 }
