--- a/ui/ui-alert/ui-alert.css
+++ b/ui/ui-alert/ui-alert.css
@@ -12,7 +12,7 @@ ui-alert{
   --ui-alert-surface-color-default:var(--ui-surface-color-default);
   --ui-alert-icon-color:var(--ui-color-white);
   --ui-alert-title-color:var(--ui-color-white);
-  --ui-alert-content-color:var(--ui-color-gray-350);
+  --ui-alert-content-color:var(--ui-color-gray-300);
 
   position:relative;
   display:grid;
@@ -28,16 +28,13 @@ ui-alert{
 
   /* icon */
   & > ui-icon{
-    height:100%;
+    --ui-icon-height:var(--ui-alert-icon-height);
+    --ui-icon-width:var(--ui-alert-icon-width);
     color:var(--ui-alert-icon-color);
+    align-self:center;
     grid-column:1 / 2;
     grid-row:1 / 3;
-    margin-inline-end:20px;
-
-    > svg{
-      height:var(--ui-alert-icon-height);
-      width:var(--ui-alert-icon-width);}
-  }
+    margin-inline-end:20px;}
 
   &:has([role="heading"]):has([role="note"]){
     row-gap:var(--ui-alert-row-gap);}
@@ -72,18 +69,15 @@ ui-alert{
   }
 
   /* close button */
-  & > ui-button[ui="alert-close"]{
+  & > ui-button[close]{
     --ui-button-size:24px;
     --ui-button-surface-color-default:transparent;
+    --ui-button-icon-height:16px;
+    --ui-button-icon-width:16px;
 
     position:absolute;
     top:12px;
-    inset-inline-end:12px;
-
-    > ui-icon > svg{
-      height:16px;
-      width:16px;}
-  }
+    inset-inline-end:12px;}
 
   /* shape */
   &[shape="rounded"]{--ui-alert-border-radius:var(--ui-border-radius-rounded);}
